<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login WebService</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to My App</string>
    <string name="login_button">Login</string>
    <string name="cancel_login">Cancel</string>
    <string name="login_hint">Username</string>
    <string name="image_content_description">Login Image</string>
    <string name="register"><u>New? Register here</u></string>
</resources>
